libs/bng/test/negative/N0307_compartment_in_seed_species_2_compartments.bngl
# FAIL
# OUTPUT: error: Compartment mismatch, complex cannot be in two different compartments 'C' and 'B'.

begin compartments
   B 3 1
   C 3 1  
end compartments

begin molecule types
   A(a)
end molecule types

begin seed species
   @C:A(a!1)@C.A(a!1)@B 1
end seed species